--- a/views/compras/listado.html
+++ b/views/compras/listado.html
@@ -12,7 +12,7 @@ LISTA DE COMPRAS
         <TH>Total</TH>
     </TR>
     {{for x in c: }}
-    <!--<TR><TD>{{=x.N_Factura}}</TD>
+    <TR><TD>{{=x.N_Factura}}</TD>
         <TD>{{=x.fecha}}</TD>
         <TD>{{=x.p_unitario}}</TD>
         <TD>{{=x.proveedor}}</TD>
@@ -20,13 +20,5 @@ LISTA DE COMPRAS
         <TD>{{=x.id_articulo}}</TD>
         <TD>{{=x.total}}</TD>
     </TR>
-    {{pass}} -->
-    <TR><TD>1</TD>
-        <TD>22/5/2017</TD>
-        <TD>$6000</TD>
-        <TD>Samsung</TD>
-        <TD>10</TD>
-        <TD>Samsung Galaxy J7</TD>
-        <TD>$60000</TD>
-    </TR>
+    {{pass}}
 </TABLE>
