--- a/views/ventas/VentasLocalCarga.html
+++ b/views/ventas/VentasLocalCarga.html
@@ -1,4 +1,4 @@
-{{extend 'layout.html'}}
+{{extend 'plantilla.html'}}
 <h1>Ventas Local carga</h1>
 <form class="form-horizontal" enctype="multipart/form-data" >
 
