--- a/views/ventas/VentasLocal.html
+++ b/views/ventas/VentasLocal.html
@@ -1,4 +1,4 @@
-{{extend 'layout.html'}}
+{{extend 'plantilla.html'}}
 <h1>REGISTRAR VENTA</h1>
 <!------ metodo post para eviar el formulario ingresado a otra vista ------->
 <form class="form-horizontal" action="{{=URL(c="ventas",f="VentasLocalCarga")}}" enctype="multipart/form-data" method="POST">
