subo modulo ventas con facturacion

--- a/views/ventas/GenerarFactura.html
+++ b/views/ventas/GenerarFactura.html
@@ -1,4 +1,4 @@
-{{extend 'layout.html'}}
+{{extend 'plantilla.html'}}
 <center>
 <body> 
 <h1> <p class="text-center visible-lg bg-success">Espere por favor... </p></h1>
