Subo modulo actualizado de supervisor nueva facturacion dinamica , seccios pedidos con estados dinamicos, envio de factura e-mail, carga y visualizacion de las ventas modificaciones esteticas

--- a/views/altas/alta_cliente.html
+++ b/views/altas/alta_cliente.html
@@ -1,5 +1,5 @@
 {{extend 'plantilla.html'}}
-<BODY background="{{=URL('static','images/fond.jpg')}}">
+<BODY background>
 </BODY>
 <H2>CLIENTES</H2>
 {{=f}}
