--- a/views/default/user.html
+++ b/views/default/user.html
@@ -1,19 +1,21 @@
 {{extend 'plantilla.html'}}
 
 <h2>
-{{=T('Sign Up') if request.args(0) == 'register' else T('Log In') if request.args(0) == 'login' else T(request.args(0).replace('_',' ').title())}}
+{{=T('Sign Up') if request.args(0) == 'register' else T('Iniciar Sesion') if request.args(0) == 'login' else T(request.args(0).replace('_',' ').title())}}
 </h2>
 
+<center>
 <div class="container">
     <div class="row">
         <div id="web2py_user_form" class="col-lg-6">
+            <img src="{{=URL('static','/storephone.jpg')}}" width="250" height="200"</img>
         {{
         if request.args(0)=='login':
             if not 'register' in auth.settings.actions_disabled:
-                form.add_button(T('Sign Up'),URL(args='register', vars={'_next': request.vars._next} if request.vars._next else None),_class='btn btn-default')
+                form.add_button(T('Cerrar Sesion'),URL(args='register', vars={'_next': request.vars._next} if request.vars._next else None),_class='btn btn-default')
             pass
             if not 'request_reset_password' in auth.settings.actions_disabled:
-                form.add_button(T('Lost Password'),URL(args='request_reset_password'),_class='btn btn-default')
+                form.add_button(T('Olvide La Contraseña'),URL(args='request_reset_password'),_class='btn btn-default')
             pass
         pass
         =form
@@ -21,7 +23,7 @@
         </div>
     </div>
 </div>
-
+</center>
 
 {{block page_js}}
 <script>
@@ -32,4 +34,5 @@
     web2py_validate_entropy(jQuery('#no_table_new_password'),100);
 {{pass}}
 </script>
+</center>
 {{end page_js}}
