--- a/views/pedidos/ListaPedidos.html
+++ b/views/pedidos/ListaPedidos.html
@@ -16,11 +16,11 @@
                     <td>{{=x.cliente.nombre}}</td>
                     <td>{{=x.articulo.nombre}}</td>
                     <td>{{=x.fecha}}</td>
-                    <td><span class="label label-{{=x.color}}">{{=x.estado}}</span></td>
+                    <td><span class="label label-{{=x.estado.color}}">{{=x.estado.nombre}}</span></td>
                     <td>
                         <div class="progress">
-                            <div class="progress-bar progress-bar-{{=x.color}}" style="width: {{=x.progreso}}%;">
-                                {{=x.progreso}}%
+                            <div class="progress-bar progress-bar-{{=x.estado.color}}" style="width: {{=x.estado.progreso}}%;">
+                                {{=x.estado.progreso}}%
                             </div>
                         </div>
                     </td>
@@ -32,17 +32,27 @@
                             <table class="table table-condensed table-user-content" id="hidden_table_{{=x.id}}">
                                 <tbody>
                                     <tr>
-                                        <td>ID Articulo :</td>
-                                        <td class="right-col">{{=x.articulo}} </td>
+                       <a href="{{=URL(c='pedidos', f='cambiarEstado', args=(x.id,))}}" type="submit" class="btn btn-success"><i class="glyphicon .glyphicon-send"></i> Despachar </a>
+                       <a href="{{=URL(c='pedidos', f='pasaraentregado', args=(x.id,))}}" type="submit" class="btn btn-info"><i class="glyphicon .glyphicon-send"></i> Cambiar a Entregado </a>
+                       <a href="{{=URL(c='pedidos', f='cargarfactura', args=(x.id,))}}" type="submit" class="btn btn-primary"><i class="glyphicon .glyphicon-floppy-save"></i> Venta Realizadas </a>
+                       <a href="{{=URL(c='pedidos', f='borrarpedido', args=(x.id,))}}" type="submit" class="btn btn-danger"><i class="glyphicon .glyphicon-book"></i> BORRAR PEDIDO </a>
+                                    </tr>
+                                    <tr>
+                                          <td><A href="{{=URL(c='pedidos', f='editar_pedidos', args=(x.id, ))}}">EDITAR</A></td>
+                                    </tr>
+                                    <tr>
+                                        <td>ID Pedido :</td>
+                                        <td class="right-col">{{=x.id}} </td>
                                     </tr>
                                     <tr>
                                         <td>Cantidad :</td>
                                         <td class="right-col">{{=x.cantidad}} </td>
                                     </tr>
                                     <tr>
-                                        <td>Precio Unidad :</td>
+                                        <td>Precio Unitario :</td>
                                         <td class="right-col">{{=x.articulo.precio}}</td>
                                     </tr>
+                                     </tr>
                                 </tbody>
                             </table>
                         </div>
