--- a/views/ventas/VentasCarga.html
+++ b/views/ventas/VentasCarga.html
@@ -3,13 +3,13 @@
 <form class="form-horizontal" enctype="multipart/form-data" >
 
    <!-- ------MOSTRAR VENDEDOR ACTUAL ------------------ -->
-  <div class="form-group">
+ <!-- <div class="form-group">
     <label for="userlogeado"  class="col-sm-1 control-label">Vendedor: </label>
       <div class="col-sm-2">
        <input type="text" class="form-control"></input>
     </div>
  </div>
-
+-->
    <!-- ------MOSTRAR CLIENTE ACTUAL ------------------ -->
 
 <div class="form-group">
